# genesis-contracts

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: build-test-contracts.yml  ci.yml
contracts/alice/src/: lib.rs
contracts/bob/src/: lib.rs
contracts/host_fn/: Makefile
contracts/stake/: Cargo.toml  Makefile
contracts/stake/tests/: partial_stake.rs  stake_from_contract.rs
contracts/stake/tests/common/: init.rs
contracts/transfer/: Makefile
contracts/transfer/tests/: moonlight.rs
scripts/: build-test-contracts.sh  download-rusk.sh  setup-compiler.sh
stake/: Makefile
stake/tests/: stake_from_contract.rs
transfer/: CHANGELOG.md  Makefile
transfer/tests/: phoenix.rs
