[workspace]
members = []

[workspace.dependencies]
# Dusk dependencies
dusk-core = "1.4.0"
dusk-bytes = "0.1.7"
dusk-vm = "1.4.3"
dusk-wallet-core = "1.4.0"
rusk-profile = "1.4.0"
rusk-prover = "1.3.0"

# Other dependencies
bytecheck = { version = "0.6.12", default-features = false }
criterion = "0.5.1"
ff = { version = "0.13", default-features = false }
rand = { version = "0.8.5", default-features = false }
ringbuffer = "0.15"
rkyv = { version = "0.7.39", default-features = false }
